changes to original code to normalise text in csv file rather than txt files

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,7 +1,6 @@
 [paths]
-table_path = /YOUR/FILE/PATH/
-text_path = /YOUR/FILE/PATH/
-output_path = /YOUR/FILE/PATH/
+table_path = /Users/christina/Documents/divergent_discourses/TibNorm/tables
+output_path = /Users/christina/Documents/divergent_discourses/TibNorm/output
 
 [parameters]
 flag = 1
