--- a/src/config.ini
+++ b/src/config.ini
@@ -1,6 +1,6 @@
 [paths]
-table_path = /Users/christina/Documents/divergent_discourses/TibNorm/tables
-output_path = /Users/christina/Documents/divergent_discourses/TibNorm/output
+table_path = /YOUR/FILE/PATH/
+output_path = /YOUR/FILE/PATH/
 
 [parameters]
 flag = 1
