Cherry-picked select updates from upstream

--- a/src/config.ini
+++ b/src/config.ini
@@ -1,5 +1,5 @@
 [paths]
-table_path = /YOUR/FILE/PATH/
+table_path = /Users/christina/Documents/divergent_discourses/TibNormCSV/tables
 
 [parameters]
 flag = 1
