--- a/src/config.ini
+++ b/src/config.ini
@@ -1,5 +1,5 @@
 [paths]
-table_path = /Users/christina/Documents/divergent_discourses/TibNormCSV/tables
+table_path = /path/to/table
 
 [parameters]
 flag = 1
